--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: bebasneue;
-  src: url(/todo_opgave/fonts/BebasNeue-Regular.ttf);
+  src: url(/fonts/BebasNeue-Regular.ttf);
 }
 
 @font-face {
   font-family: poppins;
-  src: url(/todo_opgave/fonts/Poppins-Regular.ttf);
+  src: url(/fonts/Poppins-Regular.ttf);
 }
 
 h1 {
@@ -130,7 +130,7 @@ li {
   list-style: none;
   border-bottom: solid 1.5px #4c4d52;
   font-family: poppins;
-  font-size: 20px;
+  font-size: 18px;
   margin: 1.5rem 20px 0px 20px;
   padding-bottom: 5px;
   color: #333436;
@@ -150,17 +150,18 @@ li p {
 }
 
 .info {
-  display: block;
-  margin: 1.5rem 20px 0px 20px;
+  margin: 0rem 0px 0px 20px;
   font-family: poppins;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 /* billeder */
-.uncheckedstar {
-  vertical-align: bottom;
-  width: 25px;
-  height: 25px;
+.uncheckedstar,
+.uncheckedcircle,
+.trashicon {
+  vertical-align: top;
+  width: 15px;
+  height: 15px;
   margin-left: 5px;
 }
 
