--- a/index.css
+++ b/index.css
@@ -172,3 +172,39 @@ li p {
   height: 35px;
   margin: 0 10px 0 10px;
 }
+
+@media only screen and (max-width: 600px) {
+  #btntodo,
+  #btndone {
+    max-width: 180px;
+  }
+
+  #todolist,
+  #donelist {
+    min-width: 339px;
+    max-width: 339px;
+  }
+  #todo_input,
+  #amount_input {
+    display: flex;
+    max-width: 80px;
+    max-height: 40px;
+    font-size: 14px;
+  }
+  .writetodobtn {
+    max-width: 100px;
+    max-height: 40px;
+    margin-right: 10px;
+    padding: 10px;
+  }
+  li {
+    font-size: 16px;
+  }
+
+  .checkbox,
+  .star,
+  .deleteimg {
+    max-width: 20px;
+    max-height: 20px;
+  }
+}
