--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ h1 {
 
 .todo-body {
   background-color: #dedbcc;
-  margin: 20px;
+  margin: 20px 100px;
 }
 
 button {
@@ -100,6 +100,8 @@ button {
   border: solid 2px #4c4d52;
   font-family: poppins;
   width: 150px;
+  border-radius: 5px;
+  padding-left: 10px;
 }
 
 #amount_input {
@@ -107,6 +109,8 @@ button {
   width: 120px;
   border: solid 2px #4c4d52;
   font-family: poppins;
+  border-radius: 5px;
+  padding-left: 10px;
 }
 
 .writetodobtn {
@@ -118,6 +122,11 @@ button {
   cursor: pointer;
   font-family: poppins;
   align-content: end;
+  border-radius: 5px;
+}
+
+.writetodobtn:hover {
+  box-shadow: 1px 1px 5px #33343666;
 }
 
 ul,
@@ -138,6 +147,7 @@ li {
 
 li p {
   margin: auto;
+  text-align: left;
 }
 
 *:focus {
@@ -165,12 +175,19 @@ li p {
   margin-left: 5px;
 }
 
-.checkbox,
 .star,
 .deleteimg {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   margin: 0 10px 0 10px;
+  cursor: pointer;
+}
+
+.checkbox {
+  width: 25px;
+  height: 25px;
+  margin: 2px 10px 0 10px;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
